# spacy-example-deployed-service

./: Dockerfile  Makefile  README.md  pyproject.toml
src/: main.py  models.py
tasks/: lint.sh
