[tool.poetry]
name = "spacy-ner-service"
version = "0.1.0"
description = "This is an example NER service with spacy."
authors = ["JayThibs <thibo.jacques@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
spacy = "^3.0.6"
en_core_web_sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.0.0/en_core_web_sm-3.0.0.tar.gz"}
fastapi = "^0.65.1"
uvicorn = "^0.13.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
